# arduino-laser

./: Cargo.toml  README.md  fitting-0.1.1-cp36-abi3-win_amd64.whl
src/: arduino.rs  endian_traits.rs  erf.ino  macro_paralel_test  macro_paralel_test.cpp  main.rs  math.rs  process.rs
src/actual_measure/: actual_measure.ino
src/callib_time/: callib_time.ino
src/driver/: driver.ino
src/krystof/ardu/: ardu.ino
src/krystof/ardu/data/: paralel.ino
src/krystof/paralel/: paralel.ino
src/sketch_dec17a/: sketch_dec17a.ino
src/sketch_dec26a/: sketch_dec26a.ino
