[package]
name = "arduino-laser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
poloto = "2.20.4"
libm = "0.2.1"
serial-derive = { path = "serial-derive" }
serde = "1.0.133"
rmp-serde = "0.15.5"
serde_derive = "1.0.133"